# krunner_translator_cpp

./: CMakeLists.txt  Messages.sh  README.md
src/: CMakeLists.txt  krunner_translator_cpp.cpp  krunner_translator_cpp.h  krunner_translator_cpp.json
